# fixme

./: TODO.md
backend/: README.md  backup.sqlite3  manage.py  requirements.txt
backend/bashmemo_server/: asgi.py  settings.py  urls.py  wsgi.py
backend/bookmark/: admin.py  models.py  serializers.py  views.py
backend/bookmark/migrations/: 0001_initial.py
backend/bookmark/templates/: login-success.html
backend/bookmark/tests/: test_serializers.py  test_views.py
frontend/: README.md  pyproject.toml  requirements.txt  run.py  setup.py
frontend/src/bashmemo/: config.py  main.py  utils.py
